<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.PaymentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Card number:"
        android:textAppearance="?android:attr/textAppearanceLarge"  />

    <EditText
        android:id="@+id/billing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="16"
        android:hint="@string/billing"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Expiry Date:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CVV:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/expDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLength="5"
            android:digits="1234567890/"
            android:hint="@string/cardDate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/cvv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:inputType="number"
            android:maxLength="3"
            android:hint="@string/cardCvv"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </GridLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name in Card:"
        android:textAppearance="?android:attr/textAppearanceLarge"/>


    <EditText
        android:id="@+id/cardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textCapCharacters"
        android:hint="@string/cardName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/resetPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/review_purchase_button_margin"
        android:layout_marginTop="@dimen/review_purchase_button_margin"
        android:layout_marginRight="@dimen/review_purchase_button_margin"
        android:background="@color/colorPrimary"
        android:onClick="buttonChangePayment"
        android:text="@string/updateInfo"
        android:textColor="#FFFFFF" />

</LinearLayout>